estilos del formulario, con iconos nuevos  y pantalla de desarrollo

--- a/index.html
+++ b/index.html
@@ -24,11 +24,26 @@
                             <form id="msform">
                                 <!-- progressbar -->
                                 <ul id="progressbar">
-                                    <li class="active" id="account"><strong>Mi Domicilio</strong></li>
-                                    <li id="personal"><strong>Personal</strong></li>
-                                    <li id="payment"><strong>Payment</strong></li>
-                                    <li id="commercial"><strong>Informacion Comercial</strong></li>
-                                    <li id="confirm"><strong>Finish</strong></li>
+                                    <li class="active" id="home">
+                                        <i class="fa fa-home" aria-hidden="true"></i>
+                                        <span> Mi Domicilio </span> 
+                                    </li>
+                                    <li id="personalInfo">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <span>Informacion Personal</span>
+                                    </li>
+                                    <li id="files">
+                                        <i class="fa fa-upload" aria-hidden="true"></i>
+                                        <span>Subir Archivos</span>
+                                    </li>
+                                    <li id="commercial">
+                                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                        <span>Informacion Comercial</span>
+                                    </li>
+                                    <li id="userInfo">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <span>Datos del Usuario</span>
+                                    </li>
                                 </ul> <!-- fieldsets -->
                                 <fieldset>
                                     <div class="form-card">
@@ -87,78 +102,65 @@
                                             </select>
                                             <label for="city"> Si no encuentras tu Barrio en la lista, escríbelo aquí *</label>
                                             <input type="text" name="lname"
-                                            placeholder="Escribe tu Barrio" />
+                                            placeholder="Escribe tu Barrio" class="form__input--mariginButton"/>
                                             <p class="form-paragraph">Los campos marcados con un “*” son campos obligatorios </p>
-                                    </div> <input type="button" name="next" class="next action-button"
-                                        value="Next Step" />
+                                    </div> 
+                                    <input type="button" name="next" class="next action-button col-11"
+                                        value="Continuar" />
+                                    <p class="input-paragraph">¿Ya tienes cuenta? <a class="input-link" href="">Inicia sesión</a></p>
                                 </fieldset>
                                 <fieldset>
                                     <div class="form-card">
-                                        <h2 class="fs-title">Personal Information</h2> <input type="text" name="fname"
-                                            placeholder="First Name" /> <input type="text" name="lname"
-                                            placeholder="Last Name" /> <input type="text" name="phno"
-                                            placeholder="Contact No." /> <input type="text" name="phno_2"
-                                            placeholder="Alternate Contact No." />
-                                    </div> <input type="button" name="previous" class="previous action-button-previous"
-                                        value="Previous" /> <input type="button" name="next" class="next action-button"
-                                        value="Next Step" />
-                                </fieldset>
-                                <fieldset>
-                                    <div class="form-card">
-                                        <h2 class="fs-title">Payment Information</h2>
-                                        <div class="radio-group">
-                                            <div class='radio' data-value="credit"><img
-                                                    src="https://i.imgur.com/XzOzVHZ.jpg" width="200px" height="100px">
-                                            </div>
-                                            <div class='radio' data-value="paypal"><img
-                                                    src="https://i.imgur.com/jXjwZlj.jpg" width="200px" height="100px">
-                                            </div> <br>
-                                        </div> <label class="pay">Card Holder Name*</label> <input type="text"
-                                            name="holdername" placeholder="" />
-                                        <div class="row">
-                                            <div class="col-9"> <label class="pay">Card Number*</label> <input
-                                                    type="text" name="cardno" placeholder="" /> </div>
-                                            <div class="col-3"> <label class="pay">CVC*</label> <input type="password"
-                                                    name="cvcpwd" placeholder="***" /> </div>
+                                        <div class="developing">
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                            <p>Estamos en desarrollo</p> 
                                         </div>
-                                        <div class="row">
-                                            <div class="col-3"> <label class="pay">Expiry Date*</label> </div>
-                                            <div class="col-9"> <select class="list-dt" id="month" name="expmonth">
-                                                    <option selected>Month</option>
-                                                    <option>January</option>
-                                                    <option>February</option>
-                                                    <option>March</option>
-                                                    <option>April</option>
-                                                    <option>May</option>
-                                                    <option>June</option>
-                                                    <option>July</option>
-                                                    <option>August</option>
-                                                    <option>September</option>
-                                                    <option>October</option>
-                                                    <option>November</option>
-                                                    <option>December</option>
-                                                </select> <select class="list-dt" id="year" name="expyear">
-                                                    <option selected>Year</option>
-                                                </select> </div>
-                                        </div>
-                                    </div> <input type="button" name="previous" class="previous action-button-previous"
-                                        value="Previous" /> <input type="button" name="make_payment"
-                                        class="next action-button" value="Confirm" />
+                                        
+                                    </div> 
+                                    <input type="button" name="previous" class="previous action-button-previous"
+                                        value="Regresar" /> 
+                                    <input type="button" name="next" class="next action-button action-button--width"
+                                        value="Continuar" />
+                                    <p class="input-paragraph">¿Ya tienes cuenta? <a class="input-link" href="">Inicia sesión</a></p>
                                 </fieldset>
                                 <fieldset>
                                     <div class="form-card">
-                                        <h2 class="fs-title text-center">Success !</h2> <br><br>
-                                        <div class="row justify-content-center">
-                                            <div class="col-3"> <img
-                                                    src="https://img.icons8.com/color/96/000000/ok--v2.png"
-                                                    class="fit-image"> </div>
-                                        </div> <br><br>
-                                        <div class="row justify-content-center">
-                                            <div class="col-7 text-center">
-                                                <h5>You Have Successfully Signed Up</h5>
-                                            </div>
+                                        <div class="developing">
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                            <p>Estamos en desarrollo</p> 
+                                        </div>
+                                    </div> 
+                                    <input type="button" name="previous" class="previous action-button-previous"
+                                        value="Regresar" /> 
+                                    <input type="button" name="next" class="next action-button action-button--width"
+                                        value="Continuar" />
+                                    <p class="input-paragraph">¿Ya tienes cuenta? <a class="input-link" href="">Inicia sesión</a></p>
+                                </fieldset>
+                                <fieldset>
+                                    <div class="form-card">
+                                        <div class="developing">
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                            <p>Estamos en desarrollo</p> 
                                         </div>
                                     </div>
+                                    <input type="button" name="previous" class="previous action-button-previous"
+                                        value="Regresar" /> 
+                                    <input type="button" name="next" class="next action-button action-button--width"
+                                        value="Continuar" />
+                                    <p class="input-paragraph">¿Ya tienes cuenta? <a class="input-link" href="">Inicia sesión</a></p>
+                                </fieldset>
+                                <fieldset>
+                                    <div class="form-card">
+                                        <div class="developing">
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                            <p>Estamos en desarrollo</p> 
+                                        </div>
+                                    </div>
+                                    <input type="button" name="previous" class="previous action-button-previous"
+                                        value="Regresar" /> 
+                                    <input type="button" name="next" class="next action-button action-button--width"
+                                        value="¡Registrame!" />
+                                    <p class="input-paragraph">¿Ya tienes cuenta? <a class="input-link" href="">Inicia sesión</a></p>
                                 </fieldset>
                             </form>
                         </div>
